# chat_websocket

./: README.en.md  README.md
client/: CMakeLists.txt
client/include/: WebsocketClient.h  user.h
client/src/: WebsocketClient.cpp  client.cpp  client_.cpp
server/: CMakeLists.txt
server/include/: RoomManager.h  inc.h  json.h  log.h  server.h
server/src/: RoomManager.cpp  main.cpp  server.cpp
